--- a/indexHome.html
+++ b/indexHome.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Shopping Website</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Seika - Home</title>
+    <link rel="stylesheet" type="text/css" href="styles/styleMain.css">
 </head>
 <body>
     <header>
