--- a/indexHome.html
+++ b/indexHome.html
@@ -3,17 +3,28 @@
 <head>
     <title>Seika - Home</title>
     <link rel="stylesheet" type="text/css" href="styles/styleMain.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <h1>Welcome to our Shopping Website</h1>
         <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Products</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
+            <ul class="nav justify-content-center" >
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="indexHome.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="indexProduct.html">Shop</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="indexPortfolio.html">Portfolio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="indexAboutme.html">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="indexPolicy.html">Policy</a>
+                  </li>
+              </ul>
         </nav>
     </header>
     
