changed the header

--- a/indexHome.html
+++ b/indexHome.html
@@ -13,19 +13,22 @@
         <nav>
             <ul class="nav justify-content-center" >
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="indexHome.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="indexHome.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="indexProduct.html">Shop</a>
+                  <a class="nav-link" href="indexProduct.html">SHOP</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="indexPortfolio.html">Portfolio</a>
+                  <a class="nav-link" href="indexPortfolio.html">PORTFOLIO</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="indexAboutme.html">About Me</a>
+                  <a class="nav-link" href="indexAboutme.html">ABOUT ME</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="indexPolicy.html">Policy</a>
+                    <a class="nav-link" href="indexContact.html">CONTACT</a>
+                  </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="indexPolicy.html">POLICY</a>
                   </li>
               </ul>
         </nav>
@@ -61,6 +64,7 @@
 
           <div>
             <h1>New Arrivals</h1>
+            
           </div>
           <div>
             <h1>Products</h1>
