made changes the the style

--- a/indexHome.html
+++ b/indexHome.html
@@ -118,10 +118,10 @@
               <h1>Products</h1>
               <div id="productsSection">
                 <div class="card-container">
-                  <a href="indexProduct.html" class="card"><img src="images/20240317_181253.jpg" alt=""></a>
-                  <a href="indexProduct.html" class="card"><img src="images/20240317_181253.jpg" alt=""></a>
-                  <a href="indexProduct.html" class="card"><img src="images/20240317_181253.jpg" alt=""></a>
-                  <a href="indexProduct.html" class="card"><img src="images/20240317_181253.jpg" alt=""></a>
+                  <a href="indexProduct.html" class="card"><img src="images/20240317_181253.jpg" alt=""><div class="card-text">All</div></a>
+                  <a href="indexProduct.html" class="card"><img src="images/20240317_181253.jpg" alt=""><div class="card-text">Prints</div></a>
+                  <a href="indexProduct.html" class="card"><img src="images/20240317_181253.jpg" alt=""><div class="card-text">Keychains</div></a>
+                  <a href="indexProduct.html" class="card"><img src="images/20240317_181253.jpg" alt=""><div class="card-text">Other</div></a>
                 </div>
               </div>
             </div>
