--- a/indexPortfolio.html
+++ b/indexPortfolio.html
@@ -39,7 +39,31 @@
     </main>
     
     <footer>
-      
+      <nav>
+        <ul class="nav justify-content-center" >
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="indexHome.html">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="indexProduct.html">SHOP</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="indexPortfolio.html">PORTFOLIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="indexAboutme.html">ABOUT ME</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="indexContact.html">CONTACT</a>
+              </li>
+            <li class="nav-item">
+                <a class="nav-link" href="indexPolicy.html">POLICY</a>
+              </li>
+          </ul>
+          <br>
+          <a href="https://twitter.com/seika_artz?lang=en"><img src="images/xicon.png" alt="twitter" title="twitter"></a>
+          <a href="https://www.instagram.com/seika_artz/?hl=en"><img src="images/instaicon.png" alt="instagram" title="instagram"></a>
+    </nav>
     </footer>
 </body>
 </html>
