--- a/indexHome.html
+++ b/indexHome.html
@@ -4,7 +4,7 @@
     <title>Seika - Home</title>
     <link rel="stylesheet" type="text/css" href="styles/styleMain.css">
     <link rel="stylesheet" href="styles/newArrivalStyle.css">
-    <link rel="stylesheet" href="styles/productCard.css">
+    <link rel="stylesheet" href="styles/mainproductCard.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
