added drop down for shop tab

--- a/indexContact.html
+++ b/indexContact.html
@@ -10,28 +10,35 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul class="nav justify-content-center" >
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="indexHome.html">HOME</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="indexProduct.html">SHOP</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="indexPortfolio.html">PORTFOLIO</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="indexAboutme.html">ABOUT ME</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="indexContact.html">CONTACT</a>
-                  </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="indexPolicy.html">POLICY</a>
-                  </li>
-              </ul>
-        </nav>
+      <nav>
+        <ul class="nav justify-content-center" >
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="indexHome.html">HOME</a>
+            </li>
+            <li class="nav-item">
+              <div class="dropdown">
+                <a class="nav-link" href="indexProduct.html">SHOP</a>
+                <div class="dropdown-content">
+                    <a href="indexPrint.html">PRINTS</a>
+                    <a href="indexKeychain.html">KEYCHAINS</a>
+                    <a href="indexOtherProduct.html">OTHER</a>
+                </div>
+            </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="indexPortfolio.html">PORTFOLIO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="indexAboutme.html">ABOUT ME</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="indexContact.html">CONTACT</a>
+              </li>
+            <li class="nav-item">
+                <a class="nav-link" href="indexPolicy.html">POLICY</a>
+              </li>
+          </ul>
+    </nav>
     </header>
     
     <main>
