--- a/indexHome.html
+++ b/indexHome.html
@@ -19,7 +19,14 @@
                   <a class="nav-link active" aria-current="page" href="indexHome.html">HOME</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="indexProduct.html">SHOP</a>
+                  <div class="dropdown">
+                    <a class="nav-link" href="indexProduct.html">SHOP</a>
+                    <div class="dropdown-content">
+                        <a href="indexPrint.html">PRINTS</a>
+                        <a href="indexKeychain.html">KEYCHAINS</a>
+                        <a href="indexOtherProduct.html">OTHER</a>
+                    </div>
+                </div>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="indexPortfolio.html">PORTFOLIO</a>
