--- a/indexProduct.html
+++ b/indexProduct.html
@@ -51,7 +51,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-3 mx-auto" style="width: 15rem;">
               <img src="images/20240317_181253.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -61,7 +61,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-3 mx-auto" style="width: 15rem;">
               <img src="images/20240317_181253.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -71,7 +71,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-3 mx-auto" style="width: 15rem;">
               <img src="images/20240317_181253.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-3 mx-auto" style="width: 15rem;">
               <img src="images/20240317_181253.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -91,7 +91,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-3 mx-auto" style="width: 15rem;">
               <img src="images/20240317_181253.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -101,7 +101,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-3 mx-auto" style="width: 15rem;">
               <img src="images/20240317_181253.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -111,7 +111,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-3 mx-auto" style="width: 15rem;">
               <img src="images/20240317_181253.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -121,7 +121,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-3 mx-auto" style="width: 15rem;">
               <img src="images/20240317_181253.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -131,7 +131,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-3 mx-auto" style="width: 15rem;">
               <img src="images/20240317_181253.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -141,7 +141,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-3 mx-auto" style="width: 15rem;">
               <img src="images/20240317_181253.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -151,7 +151,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-3 mx-auto" style="width: 15rem;">
               <img src="images/20240317_181253.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
@@ -161,7 +161,7 @@
             </div>
           </div>
           <div class="col-lg-3 col-md-6 col-sm-12">
-            <div class="card" style="width: 18rem;">
+            <div class="card mb-3 mx-auto" style="width: 15rem;">
               <img src="images/20240317_181253.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
