changed the product page and fixed policy navbar

--- a/indexPolicy.html
+++ b/indexPolicy.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <header>
   <nav>
     <ul class="nav justify-content-center" >
         <li class="nav-item">
@@ -37,7 +38,7 @@
             <a class="nav-link" href="indexPolicy.html">POLICY</a>
           </li>
       </ul>
-</nav>
+    </nav>
     </header>
     
     <main>
