--- a/indexOtherProduct.html
+++ b/indexOtherProduct.html
@@ -8,7 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap" rel="stylesheet">
-</head>
+    <!-- Bootstrap CSS -->
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Bootstrap Icons CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.7.2/font/bootstrap-icons.min.css" rel="stylesheet">
+
+  </head>
 <body>
     <header>
         <nav>
@@ -38,6 +44,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="indexPolicy.html">POLICY</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="cart.html"><i class="bi bi-cart">Cart</i></a>   
+                   </li>
               </ul>
         </nav>
     </header>
