--- a/cart.html
+++ b/cart.html
@@ -52,10 +52,10 @@
          
         <main>
           <div id="cart">
-            <h2>Shopping Cart</h2>
-            <ul id="cart-items"></ul>
+            <h2>Your Shopping Cart</h2>
+            <div id="cart-items"> </div>
             <p id="cart-total">Total: $0.00</p>
-        </div>
+            <button onclick="clearCart()">Clear Cart</button>
         </main>        
         <script src="scripts/cart.js"></script>
 </html>
